RESOLVED FIXED 261798
REGRESSION (267943@main): compositing and scrolling tests crashing
https://bugs.webkit.org/show_bug.cgi?id=261798
Summary REGRESSION (267943@main): compositing and scrolling tests crashing
Alex Christensen
Reported 2023-09-19 21:32:28 PDT
Attachments
Alex Christensen
Comment 1 2023-09-19 21:39:36 PDT
EWS
Comment 2 2023-09-19 22:07:12 PDT
Committed 268178@main (c9c71eb5b045): <https://commits.webkit.org/268178@main> Reviewed commits have been landed. Closing PR #17961 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.