REGRESSION (267943@main): compositing and scrolling tests crashing https://bugs.webkit.org/show_bug.cgi?id=261798 rdar://115746676

Unreviewed.

267943@main had a few mistakes:
1. We used to always have a non-null ScrollingStateTree in the transaction after deserialization.
   I made that no longer the case, but this restores the non-nullness.
2. I called attachDeserializedNodes unnecessarily in the web process and the UI process.  It was
   only needed in the UI process, where we now get the value FromDeserialization::Yes.

* Source/WebCore/page/scrolling/ScrollingStateNode.cpp:
(WebCore::ScrollingStateNode::attachAfterDeserialization):
* Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.cpp:
(WebKit::RemoteScrollingCoordinatorTransaction::RemoteScrollingCoordinatorTransaction):
* Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.h:
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::commitScrollingTreeState):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.mm:
(WebKit::RemoteScrollingCoordinator::buildTransaction):

Canonical link: https://commits.webkit.org/268178@main